@@ -103,7 +103,7 @@ public class RegexRulesPasswordProvider implements PasswordProvider {
       }
       is.close();
     } catch (IOException e) {
-      throw new RuntimeException();
+      throw new RuntimeException(e);
     }
     return rules;
   }
